# nats-micro-calculator

./: Cargo.toml  wadm.yaml  wasmcloud.toml
src/: lib.rs
