[package]
name = "nats-micro-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde_json = "1.0.107"
futures = "0.3"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.14"
wasmcloud-interface-logging = "0.10"
wasmcloud-interface-messaging = "0.10"
wasmcloud-interface-keyvalue = "0.11.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"